Fix spacing and z-index conflicts

--- a/source-sass/app.scss
+++ b/source-sass/app.scss
@@ -277,7 +277,7 @@ section:not(.hero) {
 
 
 .hero {
-  z-index: 1001;
+  z-index: 1501;
   // min-height: 100%;
   // height: 100%;
   background: url(/media/seismic-waves.svg) center 5% no-repeat, $dark-blue;
@@ -944,7 +944,7 @@ section.japan {
 
 .subduction {
   position: relative;
-  z-index: 1001;
+  z-index: 1501;
   text-align: center;
   background: $dark-blue;
   padding-top: 0 !important;
@@ -970,6 +970,10 @@ section.prediction {
 
   &.prediction--scenario {
     padding-top: 0 !important;
+
+    ul {
+      margin-bottom: 10vw;
+    }
   }
 
   h1 {
@@ -1018,7 +1022,7 @@ section.prediction {
 
 
 .prediction--chance {
-  padding-top: 0;
+  padding-top: 0 !important;
 }
 
 .subduction,
@@ -1125,7 +1129,7 @@ section.prediction {
 .footer {
   background: $dark-blue;
   position: relative;
-  z-index: 1001;
+  z-index: 1501;
 }
 
 
@@ -1156,7 +1160,7 @@ section.prediction {
     position: fixed;
     top: 25px;
     right: 15px;
-    z-index: 1000;
+    z-index: 1200;
     width: 65px;
 
     @media #{$medium-up} {
